--- a/src/containers/App.scss
+++ b/src/containers/App.scss
@@ -1,3 +1,4 @@
+$primary-color: rgba(216, 98, 20, 0.815);
 .App {
   text-align: center;
 }
@@ -10,8 +11,8 @@
 .App-header {
   background-color: #222;
   height: 150px;
-  padding: 20px;
-  color: white;
+  padding: 20px; // color: white;
+  color: $primary-color;
 }
 
 .App-title {
@@ -23,6 +24,10 @@
 }
 
 @keyframes App-logo-spin {
-  from { transform: rotate(0deg); }
-  to { transform: rotate(360deg); }
+  from {
+    transform: rotate(0deg);
+  }
+  to {
+    transform: rotate(360deg);
+  }
 }
