iniciando scss en sga

--- a/src/containers/App.scss
+++ b/src/containers/App.scss
@@ -1,33 +1,5 @@
-$primary-color: rgba(216, 98, 20, 0.815);
-.App {
-  text-align: center;
-}
+/***Imports SCSS ****/
 
-.App-logo {
-  animation: App-logo-spin infinite 20s linear;
-  height: 80px;
-}
-
-.App-header {
-  background-color: #222;
-  height: 150px;
-  padding: 20px; // color: white;
-  color: $primary-color;
-}
-
-.App-title {
-  font-size: 1.5em;
-}
-
-.App-intro {
-  font-size: large;
-}
-
-@keyframes App-logo-spin {
-  from {
-    transform: rotate(0deg);
-  }
-  to {
-    transform: rotate(360deg);
-  }
-}
+@import '../assets/css/variables.scss';
+@import './main.scss';
+@import './Login.scss';
