--- a/src/components/Maps/Maps.scss
+++ b/src/components/Maps/Maps.scss
@@ -1,8 +1,8 @@
 .gmaps{
-	position: absolute;
-	width: 100% !important;
-	height: 100% !important;
-	z-index: 9999;
+	// position: absolute;
+	// width: 100% !important;
+	// height: 100% !important;
+	// z-index: 9999;
 }
 
 .spinner-map-gif{
@@ -11,4 +11,11 @@
 	top:50vh;
 	left:90vh;
 	
+}
+.map {
+    // position: absolute;
+    top: 0;
+    left: 0;
+    right: 0;
+    bottom: 0;
 }
