--- a/src/containers/App.scss
+++ b/src/containers/App.scss
@@ -1,5 +1,9 @@
 /***Imports SCSS ****/
 
-@import '../assets/css/variables.scss';
-@import './main.scss';
-@import './Login.scss';
+@import '../assets/css/variables';
+@import './main';
+@import './Login';
+@import './Template';
+@import './Home';
+@import './Actuaciones';
+@import './Administracion';
