--- a/src/containers/_Template.scss
+++ b/src/containers/_Template.scss
@@ -2,6 +2,46 @@
     DEMO STYLE
 */
 
+p {
+    font-family: 'Poppins', sans-serif;
+    font-size: 1.1em;
+    font-weight: 300;
+    line-height: 1.7em;
+    color: #999;
+}
+
+a, a:hover, a:focus {
+    color: inherit;
+    text-decoration: none;
+    transition: all 0.3s;
+}
+
+.navbar {
+    padding: 15px 10px;
+    background: #fff;
+    border: none;
+    border-radius: 0;
+    margin-bottom: 40px;
+    box-shadow: 1px 1px 3px rgba(0, 0, 0, 0.1);
+}
+
+.navbar-btn {
+    box-shadow: none;
+    outline: none !important;
+    border: none;
+}
+
+.line {
+    width: 100%;
+    height: 1px;
+    border-bottom: 1px dashed #ddd;
+    margin: 40px 0;
+}
+
+i, span {
+    display: inline-block;
+}
+
 /* ---------------------------------------------------
     SIDEBAR STYLE
 ----------------------------------------------------- */
@@ -13,15 +53,17 @@
 #sidebar {
     min-width: 250px;
     max-width: 250px;
-    background: #7386D5;
+    background: $secondary-color;
     color: #fff;
     transition: all 0.3s;
+
 }
 
 #sidebar.active {
     min-width: 80px;
     max-width: 80px;
     text-align: center;
+    transition: all 0.3s;
 }
 
 #sidebar.active .sidebar-header h3, #sidebar.active .CTAs {
@@ -64,7 +106,7 @@
 
 #sidebar .sidebar-header {
     padding: 20px;
-    background: #6d7fcc;
+    background: $secondary-color;
 }
 
 #sidebar .sidebar-header strong {
@@ -74,7 +116,7 @@
 
 #sidebar ul.components {
     padding: 20px 0;
-    border-bottom: 1px solid #47748b;
+//    border-bottom: 1px solid $secondary-color-light4;
 }
 
 #sidebar ul li a {
@@ -83,16 +125,16 @@
     display: block;
 }
 #sidebar ul li a:hover {
-    color: #7386D5;
-    background: #fff;
+    color: $primary-color-light4;
+    background: $primary-color-dark;
 }
 #sidebar ul li a i {
     margin-right: 10px;
 }
 
 #sidebar ul li.active > a, a[aria-expanded="true"] {
-    color: #fff;
-    background: #6d7fcc;
+    color: $primary-color-light4;
+    background: $primary-color-dark;
 }
 
 
@@ -116,7 +158,7 @@ a[aria-expanded="true"]::before {
 ul ul a {
     font-size: 0.9em !important;
     padding-left: 30px !important;
-    background: #6d7fcc;
+    background: $secondary-color;
 }
 
 ul.CTAs {
@@ -132,7 +174,7 @@ ul.CTAs a {
 }
 
 a.download {
-    background: #fff;
+    background: red;
     color: #7386D5;
 }
 
@@ -208,4 +250,47 @@ a.article, a.article:hover {
     #sidebarCollapse span {
         display: none;
     }
+}
+
+.logo-area-template{
+    display: flex;
+    flex-flow: row wrap;
+    width: 100%;
+    .logo-navbar{
+        width: auto;
+        height: 40px;
+    }
+    .arrow-template{
+        width: auto;
+        margin: auto 0;
+        animation: arrow-sidebar 1s;
+        cursor:pointer;
+        transform: scale(1.5) translateX(30px);
+    }
+}
+
+.burger-menu{
+    color: $primary-color-dark;
+    margin: auto;
+    display: block;
+    transform: scale(2);
+    cursor:pointer;
+}
+
+
+@-webkit-keyframes arrow-sidebar {
+    from { opacity: 0 }
+    to { opacity: 1 }
+}
+@-o-keyframes arrow-sidebar {
+    from { opacity: 0 }
+    to { opacity: 1 }
+}
+@-moz-keyframes arrow-sidebar {
+    from { opacity: 0 }
+    to { opacity: 1 }
+}
+@keyframes arrow-sidebar {
+    from { opacity: 0 }
+    to { opacity: 1 }
 }
