corrigiendo resize map

--- a/src/containers/_Template.scss
+++ b/src/containers/_Template.scss
@@ -47,12 +47,17 @@ i, span {
 ----------------------------------------------------- */
 .wrapper {
     display: flex;
-    align-items: stretch;
+    flex-flow: row wrap;
+    #sidebar.active{
+      & + #content{
+            width: 95%;
+            transition: all 0.3s;
+        }   
+    }
 }
 
 #sidebar {
-    min-width: 250px;
-    max-width: 250px;
+    width: 13%;
     background: $secondary-color;
     color: #fff;
     transition: all 0.3s;
@@ -60,10 +65,10 @@ i, span {
 }
 
 #sidebar.active {
-    min-width: 80px;
-    max-width: 80px;
+    width: 5%;
     text-align: center;
     transition: all 0.3s;
+
 }
 
 #sidebar.active .sidebar-header h3, #sidebar.active .CTAs {
@@ -189,8 +194,7 @@ a.article, a.article:hover {
     CONTENT STYLE
 ----------------------------------------------------- */
 #content {
-    padding: 20px;
-    min-height: 100vh;
+    width: 87%;
     transition: all 0.3s;
 }
 
