--- a/src/containers/App.scss
+++ b/src/containers/App.scss
@@ -7,3 +7,5 @@
 @import './Home';
 @import './Actuaciones';
 @import './Administracion';
+@import './HeaderAdministracion';
+@import './AdministracionUsers';
