--- a/src/containers/_Template.scss
+++ b/src/containers/_Template.scss
@@ -61,6 +61,7 @@ i, span {
     background: $secondary-color;
     color: #fff;
     transition: all 0.3s;
+    height: 100vh;
 
 }
 
@@ -68,6 +69,7 @@ i, span {
     width: 5%;
     text-align: center;
     transition: all 0.3s;
+    height: 100vh;
 
 }
 
