--- a/src/assets/css/_variables.scss
+++ b/src/assets/css/_variables.scss
@@ -13,6 +13,7 @@ $secondary-color-light3: #607D8B;
 $secondary-color-light4: #8FA4AE;
 $secondary-color-light5: #CFD8DC;
 $secondary-color-light6: #ECEFF1;
+$secondary-color-light7: #F5F7F8;
 $success: #11C65B;
 $error: #D0021B;
 $warning: #F2C328;
