--- a/src/containers/App.scss
+++ b/src/containers/App.scss
@@ -16,4 +16,5 @@ html, body, #fullheight {
 @import './AdministracionUsers';
 @import './ContentAdminUserList';
 @import './NotFound';
+@import './ListModal';
 
