add table to actuaciones

--- a/src/assets/css/_variables.scss
+++ b/src/assets/css/_variables.scss
@@ -19,5 +19,6 @@ $error: #D0021B;
 $warning: #F2C328;
 $info: #4CA3F7;
 $primary-color-text: #fff;
+$primary-color-background: #fff;
 
 /*--------------------*/
