--- a/src/containers/App.scss
+++ b/src/containers/App.scss
@@ -17,4 +17,5 @@ html, body, #fullheight {
 @import './ContentAdminUserList';
 @import './NotFound';
 @import './ListModal';
+@import './Pagination';
 
