change css view toast

--- a/src/assets/css/_variables.scss
+++ b/src/assets/css/_variables.scss
@@ -19,6 +19,8 @@ $error: #D0021B;
 $warning: #F2C328;
 $info: #4CA3F7;
 $primary-color-text: #fff;
+$secondary-color-text: #F58121;
 $primary-color-background: #fff;
+$secondary-color-background: #F58121;
 
 /*--------------------*/
