--- a/src/containers/AdministracionUsers.scss
+++ b/src/containers/AdministracionUsers.scss
@@ -31,9 +31,10 @@
 					font-weight: bold;
 					font-size: 16px;
 					&.icon-search{
-						width: 4%;
-						background: white;
-						color:black;
+					    width: 3%;
+					    background: white;
+					    color: black;
+					    height: 39px;
 					}
 				}
 			}
