--- a/src/containers/ContentAdminUserList.scss
+++ b/src/containers/ContentAdminUserList.scss
@@ -1,6 +1,33 @@
 .TableShowAdmin{
 	width: 100%;
-	th {
-		text-align: center;
+    border-collapse:separate;
+    border-spacing:0 5px;
+	tr{
+		height: 35px;
+		background: white;
+		margin: 10px 0;
+		th, td {
+			text-indent: justify;
+			text-align: center;
+			
+		}
+
+		td{
+			color: $secondary-color-light3;
+			font-weight: 600;
+		}
 	}
+	
+	thead > tr {
+		color: $secondary-color-light4;
+		font-weight: 900;
+		background: none;
+		font-size: 15px;
+	}	
+
+}
+
+.footer-pagination{
+	width: 20%;
+	margin: 0 auto;
 }
