--- a/src/containers/HeaderAdministracion.scss
+++ b/src/containers/HeaderAdministracion.scss
@@ -1,23 +1,47 @@
 .headerAdministracion {
 	background: $secondary-color;
 	width: 100%;
-    height: 40px;
+    height: 80px;
 	ul {
 		list-style-type: none;
 		display: flex;
 		flex-flow:row wrap;
 	    height: 100%;
+	    li{
+	    	margin:auto;
+			height: 80px;
+    		padding-top: 40px;
+    		width: 50%;
+			&:hover,
+			&:active{
+			    border-bottom: 3px solid $primary-color;
+			}
+	    }
 		a{
 			text-align: center;
 			margin: auto;
 			flex:1;
-			font-size: 24px;
+			font-size: 16px;
 			color:white;
 			font-weight: bold;
-			&:hover,
-			&:active{
-			    border-bottom: 4px solid $primary-color;
-			}
 		}
+	}
+}
+
+.footer-pagination{
+	ul{
+		&.pagination{
+	    	margin:-20px 0 !important;
+		}
+	    &.pagination>li>a, 
+	    &.pagination>li>span{
+	    	background: $secondary-color-light7;
+	    	color:$secondary-color-light4 !important;
+	    	border: none;	
+	    }
+	    &.pagination>li.active>a{
+	    	color:$primary-color !important;
+	    	background: $secondary-color-light7;
+	    }
 	}
 }
